--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "jstates",
-  "version": "0.4.0",
-  "description": "JStates - A simple js state library",
+  "name": "rstates",
+  "version": "1.0.0",
+  "description": "RStates - A simple js state library",
   "main": "dist/index.min.js",
   "module": "dist/index.es.js",
   "scripts": {
@@ -16,7 +16,7 @@
   ],
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/orYoffe/jstates.git"
+    "url": "git+https://github.com/Quozzo/rstates.git"
   },
   "keywords": [
     "state",
@@ -29,15 +29,12 @@
     "react-native",
     "react-native-web"
   ],
-  "author": {
-    "name": "Or Yoffe",
-    "url": "https://github.com/orYoffe"
-  },
+  "author": "Quozzo (https://github.com/Quozzo)",
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/orYoffe/jstates/issues"
+    "url": "https://github.com/Quozzo/rstates/issues"
   },
-  "homepage": "https://github.com/orYoffe/jstates#readme",
+  "homepage": "https://github.com/Quozzo/rstates#readme",
   "devDependencies": {
     "@babel/core": "^7.3.3",
     "@babel/preset-env": "^7.3.1",
